# mqtt_postgresql_bridge

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  VersionInfo.h  cmake_install.cmake  database.hpp  example_data  main.cpp  mqtt_postgresql
lib/: libpaho-mqtt3as.so.1.3.9  libpaho-mqttpp3.so.1.2.0
